# python-packaging-101

./: .gitignore  README.md  requirements-dev.txt
mypackage1/: .gitignore  MANIFEST.in  README.md  fibo.py  pyproject.toml
mypackage1/mypkg/: thehitchhikersguidetothegalaxy.py
mypackage1/mypkg/subpkg1/: fibo.py
mypackage1/otherpkg/: reduce.py
mypackage1/otherpkg/subpkg1/: animal.py  holidays.json  sigmoid.py
mypackage1/otherpkg/subpkg1/resources1/: animals.json
mypackage1/otherpkg/subpkg1/subsubpkg1/: mypy.py
mypackage1/tests/: test_mypkg.py  test_otherpkg.py
mypackage2/: MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
mypackage2/src/mypkg/: thehitchhikersguidetothegalaxy.py
mypackage2/src/mypkg/subpkg1/: fibo.py
mypackage2/src/mypkg/subpkg2/: goodbye.py  syspath.py
mypackage2/src/namespacepkg/foo/bar/baz/: __init__.py  fizzbuzz.py
mypackage2/src/otherpkg/subpkg1/: calendar.py  sigmoid.py
mypackage2/src/otherpkg/subpkg1/subsubpkg1/: mypy.py  python.py
mypackage2/tests/: test_fibo.py  test_mypkg.py  test_namespacepkg.py  test_otherpkg.py
skeleton/: pyproject.toml
