[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage1"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "My Name", email = "my.name@example.com"},
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
where = ["."]
include = [
    "mypkg*",
    "otherpkg*",
]

[tool.setuptools]
py-modules = [
    "fibo",
]

[tool.black]
line-length = 120
target-version = [
    "py38",
    "py39",
    "py310",
]

[tool.coverage.run]
branch = true
command_line = "-m pytest"
disable_warnings = [
    "module-not-imported",
    "no-data-collected",
]
parallel = true
source_pkgs = [
    "mypkg",
    "otherpkg",
    "fibo",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
skip_empty = true

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--verbose",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
select = [
    "F",      # Pyflakes
    "E", "W", # pycodestyle
    "C90",    # mccabe
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PT",     # flake8-pytest-style
]
src = ["."]
target-version = "py38"

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
    py{38, 39, 310}
    mypy-py{38, 39, 310}
    black
    ruff
skip_missing_interpreters = true

[testenv]
description = run unit tests
deps =
    pytest
commands =
    python -m pytest
package = wheel
wheel_build_env = .pkg

[testenv:coverageclean]
description = delete coverage data
deps =
    coverage[toml]
commands =
    python -m coverage erase
labels =
    coverage
skip_install = true

[testenv:coveragerun-py{38, 39, 310}]
description = measure code coverage
deps =
    coverage[toml]
    pytest
commands =
    python -m coverage run
depends =
    coverageclean
labels =
    coverage

[testenv:coveragereport]
description = report code coverage
deps =
    coverage[toml]
commands =
    python -m coverage combine
    python -m coverage report
depends =
    coveragerun-py{38, 39, 310}
labels =
    coverage
skip_install = true
parallel_show_output = true

[testenv:mypy-py{38, 39, 310}]
description = run type checks
deps =
    mypy
    pytest
commands =
    python -m mypy {posargs:mypkg otherpkg fibo.py tests}

[testenv:black]
description = run format checks
deps =
    black
commands =
    python -m black --check {posargs:mypkg otherpkg fibo.py tests}
skip_install = true

[testenv:ruff]
description = run lint checks
deps =
    ruff
commands =
    python -m ruff {posargs:mypkg otherpkg fibo.py tests}
skip_install = true
"""
